<resources>
    <string name="app_name">Guests</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_present_guests">Present Guests</string>
    <string name="menu_absent_guests">Absent Guests</string>
    <string name="menu_all_guests">All Guests</string>
    <string name="name">Name</string>
    <string name="is_present">Is Present?</string>
    <string name="present">Present</string>
    <string name="save">Save</string>
    <string name="absent">Absent</string>
    <string name="paula_s_party">Paula\'s Party</string>
    <string name="those_who_won_t_attend_are_missing_out">Those who won´t attend are missing out</string>
    <string name="guest">Guest</string>
</resources>